| Summary: | ASTERISK-26571: res_pjsip: Resolution incorrect when explicit IPv6 transport configured | ||||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |||
| Date Opened: | 2016-11-09 15:13:54.000-0600 | Date Closed: | 2016-11-11 04:37:34.000-0600 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||
| Versions: | 14.1.1 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | When an explicit transport is configured on an endpoint that is IPv6 the resolver will incorrectly not resolve anything, as it assumes it will never receive a transport of this type.
We should still resolve but limit to IPv6 results. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2016-11-11 04:37:35.827-0600 Change 4358 merged by Joshua Colp: res_pjsip: Perform resolution when explicit IPv6 transport is used. [https://gerrit.asterisk.org/4358|https://gerrit.asterisk.org/4358] By: Friendly Automation (friendly-automation) 2016-11-11 04:37:41.850-0600 Change 4360 merged by Joshua Colp: res_pjsip: Perform resolution when explicit IPv6 transport is used. [https://gerrit.asterisk.org/4360|https://gerrit.asterisk.org/4360] By: Friendly Automation (friendly-automation) 2016-11-11 07:17:57.007-0600 Change 4359 merged by zuul: pjsip/resolver: Add tests which cover an explicit configured transport. [https://gerrit.asterisk.org/4359|https://gerrit.asterisk.org/4359] | ||||